# Omega-Model

./: .gitignore  ADVANCED_MSE.md  BIOMASS_EVIDENCE_ENGINE.md  BUILD_FINAL_WINDOWS_RELEASE.bat  BUILD_OMEGA_NATIVE_BACKEND.bat  CHANGELOG_QUANT_LAB.md  CREATE_DESKTOP_SHORTCUT.bat  DATA_DICTIONARY_COMPLETE.md  EXPERIMENTAL_DIAGNOSTICS.md  EXPERT_WORKFLOW.md  FINAL_RELEASE_STATUS.md  INTEGRATED_ASSESSMENT.md  INTERACTIVE_CHARTS.md  KNOWN_LIMITATIONS_COMPLETE.md  Launch Omega FISH Model.bat  MATHEMATICAL_SPECIFICATION.md  MODEL_GOVERNANCE.md  NATIVE_ENGINE_ARCHITECTURE.md  NOAA_VALIDATION.md  PRIORITY_DIAGNOSTICS_1_3.md  QUANT_LAB.md  README.md  README_READY_TO_RUN.md  RELEASES_4_TO_11.md  RELEASE_1_1_NOAA_VALIDATION.md  RELEASE_1_1_VALIDATION_STATUS.md  RELEASE_1_2_EXPERT_WORKFLOW_CHARTS.md  RELEASE_1_3_NATIVE_PRIORITY_DIAGNOSTICS.md  RELEASE_1_4_BIOMASS_MSE_EXPERIMENTAL.md  SETUP_OMEGA_FISH.bat  Start Omega FISH Biomass and MSE Lab.bat  Start Omega FISH Complete Assessment.bat  Start Omega FISH Expert Workflow.bat  Start Omega FISH Integrated Assessment.bat  Start Omega FISH Interactive Charts.bat  Start Omega FISH NOAA Validation.bat  Start Omega FISH Priority Diagnostics.bat  Start Omega FISH Quant Lab.bat  Start_Omega_FISH_Model.bat  VALIDATION_PLAN_COMPLETE.md  (+40 more)
.github/workflows/: noaa-ss3-validation.yml  omega-1-4-biomass-mse-validation.yml  omega-native-priority-validation.yml
Data_Sets/DPIRD/West_Australian_Dhufish/: README.md  omega_dataset.json
Data_Sets/DPIRD/West_Australian_Dhufish/Omega_Ready/: age_composition_by_area.csv  catch_by_area_sector.csv  dpird_wa_dhufish_public_reconstruction.csv  parameter_register.csv  published_assessment_outputs_digitised.csv  source_manifest.json
Data_Sets/DPIRD/West_Australian_Dhufish/Results/: stress_test_findings.json  stress_test_objective_components.csv  stress_test_summary.csv  stress_test_trajectories.csv
Data_Sets/DPIRD/West_Australian_Dhufish/Synthetic_DPIRD_Like/: README.md  age_composition.csv  calibration_metrics.json  captured_age_composition_digitised.csv  length_composition.csv  model_ready_timeseries_blind.csv  model_ready_timeseries_conditioned.csv  omega_dataset.json  parameter_register.csv  source_manifest.json  synthetic_truth.csv
Data_Sets/Data_set_Age_Structured_Demo/: age_composition.csv  length_composition.csv  model_ready_timeseries.csv  omega_dataset.json
Data_Sets/Data_set_Diagnostics_Reference/: README.md  age_composition.csv  all_functions_chart_data.csv  length_composition.csv  model_ready_timeseries.csv  omega_dataset.json
Data_Sets/NOAA/: NOAA_SOURCE_MANIFEST.json  NOAA_TEST_MODEL_CATALOGUE.csv  NOAA_TEST_MODEL_CATALOGUE.json  README.md
installer/: OmegaFISH.iss
models/Omega_Complete_Release_11_Demo/: complete_demo.json  cpue_standardized.csv  fleet_history.csv  mse_summary.csv  reliability.csv  spatial_history.csv
models/Omega_Complete_Release_11_Demo/ss3_export/: control.ss  data.ss  forecast.ss  omega_ss3_manifest.json  starter.ss
native/: CMakeLists.txt
native/include/omega/: native_engine.h
native/src/: native_engine.cpp
native/tests/: test_native_engine.cpp
stock_model/: __init__.py  advanced_mse.py  advanced_structures.py  age_structured.py  aspm_diagnostic.py  benchmark_suite.py  biomass_truth_engine.py  closed_loop_mse.py  complete_assessment.py  core.py  cpue_standardization.py  data_io.py  diagnostics_suite.py  experimental_diagnostics.py  expert_workflow.py  inference_engine.py  interactive_charts.py  interval_coverage.py  likelihood_profiles.py  native_backend.py  native_benchmark.py  observation_models.py  provenance.py  quant_lab.py  quant_report.py  quant_validation.py  ss3_interop.py  ss3_validation.py  state_space_biomass.py  tagging.py  truth_mse_charts.py
stock_model/native_libs/: README.md
tests/: test_age_structured.py  test_core_math.py  test_desktop_shell_upgrade.py  test_dpird_public_dataset.py  test_dpird_synthetic_dataset.py  test_expert_workflow.py  test_interactive_charts.py  test_native_benchmark_1_3.py  test_native_engine_1_3.py  test_priority_diagnostics_1_3.py  test_quant_lab.py  test_quant_validation.py  test_release_1_4_biomass_mse.py  test_release_readiness.py  test_releases_4_11.py  test_ss3_validation.py
tools/: build_dpird_dhufish_public_dataset.py  build_dpird_dhufish_report.py  build_dpird_dhufish_synthetic_dataset.py  create_desktop_shortcut.py  download_noaa_test_data.py  run_dpird_dhufish_public_stress_test.py  run_dpird_dhufish_synthetic_recovery_test.py
ui/: __init__.py  datasets.py  model_health.py  themes.py  tutorial.py
validation_data/noaa_ss3/: README.md
validation_data/noaa_ss3/Simple/: control.ss  data.ss  source_manifest.json  starter.ss
(+8 files in other folders)
